# gpick

./: .gitignore  .hgignore  CMakeLists.txt  Color.cpp  Color.h  ColorNames.cpp  ColorNames.h  ColorObject.cpp  ColorObject.h  DynVariable.cpp  DynVariable.h  Endian.h  FileFormat.cpp  FileFormat.h  LICENSE.txt  License.h  LuaExt.cpp  LuaExt.h  LuaSystem.cpp  LuaSystem.h  Makefile  MathUtil.cpp  MathUtil.h  README.md  Random.cpp  SConscript  SConstruct  Sampler.cpp  Version.h  exclude_patterns  main.cpp  main.h  uiColorComponent.cpp  uiConverter.cpp  uiConverter.h  uiDialogGenerate.cpp  uiDialogGenerate.h  uiDialogMix.cpp  uiDialogMix.h  uiDialogShades.cpp  (+15 more)
.azure-pipelines/: build.yml  nightly.yml  package.py  package.yml  translation-template.yml  ubuntu-latest.yml
cmake/: FindGettext.cmake  FindRagel.cmake  Version.cmake
deb/: SConscript
deb/DEBIAN/: postinst  postrm
doc/: Doxyfile
dynv/: DynvMemoryIO.cpp  DynvMemoryIO.h  DynvSystem.cpp  DynvSystem.h  DynvVarColor.cpp  DynvVarFloat.cpp  DynvVarInt32.cpp  DynvVarString.cpp  DynvVarString.h  subdir.mk
gtk/: subdir.mk  uiSwatch.cpp  uiZoomed.h
installer/: License.txt  Makefile  getversion.py  gpick.wxs  gpick_files.xstl  gtk_files.xstl  script.nsi  version.nsi
res/: build_resource.bat  colors0.txt  resources.rc
share/appdata/: gpick.appdata.xml
share/applications/: gpick.desktop
share/gpick/: color_dictionary_0.txt  colors.txt  converters.lua  helpers.lua  init.lua  layouts.lua  names-meodai-all.txt  names-meodai-best.txt  names-meodai-short.txt  names-xkcd.txt  options.lua
share/metainfo/: gpick.appdata.xml  org.gpick.gpick.metainfo.xml
source/: AutoSave.cpp  AutoSave.h  BezierCubicCurve.h  BlendColors.cpp  BlendColors.h  BrightnessDarkness.cpp  BrightnessDarkness.h  ChangeNotification.cpp  ChangeNotification.h  Channel.h  Channels.cpp  Channels.h  Clipboard.cpp  Clipboard.h  ClosestColors.cpp  ClosestColors.h  Color.cpp  Color.h  ColorAction.cpp  ColorAction.h  ColorList.cpp  ColorList.h  ColorMixer.cpp  ColorMixer.h  ColorNames.cpp  ColorNames.h  ColorObject.cpp  ColorObject.h  ColorPicker.cpp  ColorPicker.h  ColorRYB.cpp  ColorRYB.h  ColorSource.cpp  ColorSource.h  ColorSourceManager.cpp  ColorSourceManager.h  ColorSpace.h  ColorSpaceType.cpp  ColorSpaceType.h  ColorSpaces.cpp  (+134 more)
source/color_names/: ColorNames.cpp  ColorNames.h  DownloadNameFile.cpp  DownloadNameFile.h  SConscript
source/common/: Bitmask.h  CastToVariant.h  Convert.cpp  Convert.h  First.h  Format.cpp  Format.h  Guard.h  Match.h  MatchPattern.h  OptionalReference.h  Ref.cpp  Ref.h  Result.h  Scoped.h  SetOnScopeEnd.h  Span.h  StringOrView.cpp  StringOrView.h  TypeTraits.h  Unused.h
source/cssparser/: SConscript  css_grammar.y  css_grammar_wrap.cpp  css_lex.l  css_parser.cpp  css_parser.h  memory_manager.cpp  memory_manager.h
source/dbus/: Control.cpp  Control.h  DbusInterface.c  DbusInterface.h  SConscript  interface.xml
source/dynv/: Binary.cpp  Binary.h  DynvHandler.cpp  DynvHandler.h  DynvIO.cpp  DynvIO.h  DynvMemoryIO.cpp  DynvMemoryIO.h  DynvSystem.cpp  DynvSystem.h  DynvVarBool.cpp  DynvVarBool.h  DynvVarColor.cpp  DynvVarColor.h  DynvVarDynv.cpp  DynvVarDynv.h  DynvVarFloat.cpp  DynvVarFloat.h  DynvVarInt32.cpp  DynvVarInt32.h  DynvVarPtr.cpp  DynvVarPtr.h  DynvVarString.cpp  DynvVarString.h  DynvVariable.cpp  DynvVariable.h  DynvXml.cpp  DynvXml.h  Map.cpp  Map.h  MapFwd.h  Types.cpp  Types.h  Variable.cpp  Variable.h  Xml.cpp  Xml.h
source/gtk/: ColorCell.cpp  ColorCell.h  ColorComponent.cpp  ColorComponent.h  ColorWheel.cpp  ColorWheel.h  ColorWidget.cpp  ColorWidget.h  ImageView.cpp  ImageView.h  LayoutPreview.cpp  LayoutPreview.h  Range2D.cpp  Range2D.h  SConscript  Shapes.cpp  Shapes.h  Swatch.cpp  Swatch.h  Zoomed.cpp  Zoomed.h  uiSwatch.h  uiZoomed.cpp
source/i18n/: I18N.cpp  SConscript
source/internationalisation/: Internationalisation.cpp  SConscript
source/layout/: Box.cpp  Box.h  Context.cpp  Context.h  Layout.cpp  Layout.h  Layouts.cpp  Layouts.h  LuaBindings.cpp  LuaBindings.h  ReferenceCounter.cpp  ReferenceCounter.h  SConscript  Style.cpp  Style.h  System.cpp  System.h
source/lua/: Callbacks.cpp  Callbacks.h  Color.cpp  Color.h  ColorObject.cpp  ColorObject.h  DynvSystem.cpp  DynvSystem.h  Extensions.cpp  Extensions.h  GlobalState.cpp  GlobalState.h  I18N.cpp  I18N.h  Layout.cpp  Layout.h  Lua.h  Ref.cpp  Ref.h  SConscript  Script.cpp  Script.h
source/math/: Algorithms.h  BezierCubicCurve.h  BinaryTreeQuantization.cpp  BinaryTreeQuantization.h  Empty.cpp  Matrix.h  OctreeColorQuantization.cpp  OctreeColorQuantization.h  Rectangle.h  Vector.h
source/parser/: TextFile.cpp  TextFile.h  TextFileParser.rl
source/test/: BinaryTreeQuantization.cpp  Color.cpp  Common.cpp  Common.h  Dynv.cpp  DynvBinary.cpp  DynvTest.cpp  EventBus.cpp  FileFormat.cpp  First.cpp  Format.cpp  InternalConverters.cpp  Main.cpp  Matrix.cpp  OctreeColorQuantization.cpp  Ref.cpp  Result.cpp  Scoped.cpp  Script.cpp  ScriptTest.cpp  Span.cpp  TextFileParser.cpp  TextFileTest.cpp  Vector.cpp
source/tools/: BackgroundColorPicker.cpp  BackgroundColorPicker.h  ColorSpaceSampler.cpp  ColorSpaceSampler.h  PaletteFromCssFile.cpp  PaletteFromCssFile.h  PaletteFromImage.cpp  PaletteFromImage.h  SConscript  TextParser.cpp  TextParser.h
source/transformation/: BaseConfiguration.cpp  BaseConfiguration.h  Chain.cpp  Chain.h  ColorVisionDeficiency.cpp  ColorVisionDeficiency.h  Configuration.cpp  Configuration.h  Factory.cpp  Factory.h  GammaModification.cpp  GammaModification.h  Invert.cpp  Invert.h  Quantization.cpp  Quantization.h  Transformation.cpp  Transformation.h
source/unique/: SConscript  Unique.cpp  Unique.h  UniqueDBus.cpp  UniqueDummy.cpp  (+3 more)
test/: config01.xml  palette-0.2.6.gpa  palette-0.3.gpa  textImport01.txt  textImport02.txt  textImport03.txt  textImport04.txt  textImport05.txt  textImport06.txt  textImport07.txt  textImport08.txt  textImport09.txt  textImport10.txt  textImport11.txt
tools/: __init__.py  crossmingw.py  flex.py  gettext.py  gpick.py  lemon.py  ragel.py  resource_template.py  template.py  version.py
(+17 files in other folders)
